--- a/style.css
+++ b/style.css
@@ -1,3 +1,34 @@
 body {
-    background-color: darkseagreen;
+    background-color: darkseagreen !important;
+    font-family: Arial, serif !important;
+}
+
+.nav-item a {
+    font-size: 18px;
+    color: black;
+    padding: 16px !important;
+    display: block;
+}
+
+.nav-item a:hover {
+    background-color: whitesmoke;
+    color: darkseagreen;
+}
+
+.navbar {
+    --bs-navbar-padding-y: 0;
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+}
+
+.navbar-brand {
+    font-family: "Arial Black", serif !important;
+}
+
+.navbar-brand:hover {
+    color: darkseagreen !important;
+}
+
+.form-control {
+    background-color: whitesmoke !important;
 }
