--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: darkseagreen !important;
+    background-color: white !important;
     font-family: Arial, serif !important;
 }
 
@@ -21,14 +21,45 @@ body {
     padding-bottom: 0 !important;
 }
 
-.navbar-brand {
-    font-family: "Arial Black", serif !important;
+.textLogo {
+    font-family: "Arial Black", serif;
+    font-size: 18px;
 }
 
 .navbar-brand:hover {
     color: darkseagreen !important;
 }
 
-.form-control {
-    background-color: whitesmoke !important;
+#main-container {
+    margin-top: 64px;
 }
+
+#footer-bar {
+    background-color: rgb(239, 240, 242);
+}
+
+#footer-bar a {
+    color: black;
+    text-decoration: none;
+}
+
+#footer-bar a:hover {
+    color: darkseagreen;
+}
+
+footer .container .row a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.footerTitle {
+    font-weight: bold;
+}
+
+/*footer li a {*/
+/*    color: black;*/
+/*}*/
+
+/*footer li a:hover {*/
+/*    color: darkseagreen;*/
+/*}*/
