--- a/style.css
+++ b/style.css
@@ -56,10 +56,46 @@ footer .container .row a {
     font-weight: bold;
 }
 
-/*footer li a {*/
-/*    color: black;*/
-/*}*/
+.card-img-overlay h2 {
+    display: flex;
+    max-width: 100%;
+    width: 480px;
+    align-items: flex-end;
+    color: rgb(255, 255, 255);
+    margin-block: 30px 25px;
+}
 
-/*footer li a:hover {*/
-/*    color: darkseagreen;*/
-/*}*/
+.card-img-overlay h4 {
+    display: flex;
+    max-width: 100%;
+    width: 335px;
+    font-size: small;
+    align-items: flex-end;
+    color: rgb(255, 255, 255);
+    opacity: 0.7;
+    margin-block: 30px;
+}
+
+.add-offer-button {
+    background-color: darkseagreen;
+    border-radius: 8px;
+    border-style: none;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    display: inline-block;
+    height: 40px;
+    line-height: 20px;
+    margin: 0;
+    outline: none;
+    padding: 10px 16px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: baseline;
+}
+
+
+
+
+
+
