--- a/public/css/styl.css
+++ b/public/css/styl.css
@@ -101,13 +101,16 @@ footer .container .row a {
     padding-top: 20px;
     background-color: darkseagreen;
     border-radius: 50%;
+    position: relative;
 }
 
 .category-image-div img{
-    max-width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 80%;
+    height: auto;
+    transform: translate(-50%, -50%);
 }
 
 #category .list-group,
@@ -135,6 +138,11 @@ footer .container .row a {
     padding: 8px;
     top:8px;
     bottom:8px;
+}
+
+.btn-primary {
+    background-color: darkseagreen !important;
+    border-color: darkseagreen !important;
 }
 
 
