--- a/public/css/styl.css
+++ b/public/css/styl.css
@@ -57,20 +57,16 @@ footer .container .row a {
 }
 
 .card-img-overlay h2 {
-    /*display: flex;*/
     max-width: 100%;
     width: 480px;
-    /*align-items: flex-end;*/
     color: rgb(255, 255, 255);
     margin-block: 30px 25px;
 }
 
 .card-img-overlay h4 {
-    /*display: flex;*/
     max-width: 100%;
     width: 335px;
     font-size: small;
-    /*align-items: flex-end;*/
     color: rgb(255, 255, 255);
     opacity: 0.7;
     margin-block: 30px;
@@ -113,18 +109,13 @@ footer .container .row a {
     transform: translate(-50%, -50%);
 }
 
-#category .list-group,
-#sticky-sidebar .list-group {
+#category .list-group, .list-group {
     list-style-type: none;
 }
 
-.active {
+.list-group .active {
     background-color: darkseagreen !important;
     border-color: darkseagreen !important;
-}
-
-#sticky-sidebar {
-    min-width: 100px;
 }
 
 #category-main h5,
@@ -133,12 +124,12 @@ footer .container .row a {
     font-weight: bold;
 }
 
-.category-card .add-offer-button {
-    margin:0;
-    padding: 8px;
-    top:8px;
-    bottom:8px;
-}
+/*.category-card .add-offer-button {*/
+/*    margin:0;*/
+/*    padding: 8px;*/
+/*    top:8px;*/
+/*    bottom:8px;*/
+/*}*/
 
 .btn-primary {
     background-color: darkseagreen !important;
@@ -155,9 +146,68 @@ input[type="password"]:focus {
     outline: 0 none;
 }
 
+.fit-cover {
+    object-fit: cover;
+}
 
+.single-line {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* number of lines to show */
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
 
+.two-line {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* number of lines to show */
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
 
+@media (min-width: 768px) {
+    .fit-cover {
+        position: absolute;
+    }
+}
 
+#sidebar {
+    width: 24%;
+    padding: 10px;
+    float: left
+}
+#products {
+    width: 72%;
+    padding: 10px;
+    float: right
+}
 
-
+.filter {
+    display: none;
+    padding: 0;
+    margin: 0
+}
+@media(min-width:992px) {
+    #mobile-filter {
+        display: none
+    }
+}
+@media(max-width:991px) {
+    #products {
+        width: 100%;
+        padding: 5px;
+        float: right
+    }
+    .filter {
+        display: block;
+    }
+    #sidebar {
+        display: none
+    }
+    #mobile-filter {
+        padding: 10px
+    }
+}
