--- a/public/css/styl.css
+++ b/public/css/styl.css
@@ -190,6 +190,14 @@ input[type="password"]:focus {
     padding: 0;
     margin: 0
 }
+
+.carousel .carousel-inner img {
+    width: 100%;
+    height: 500px;
+    object-fit: contain;
+    overflow: hidden;
+}
+
 @media(min-width:992px) {
     #mobile-filter {
         display: none
@@ -210,4 +218,26 @@ input[type="password"]:focus {
     #mobile-filter {
         padding: 10px
     }
+    .carousel .carousel-inner img {
+        width: 100%;
+        height: 400px;
+        object-fit: contain;
+        overflow: hidden;
+    }
+}
+
+@media(max-width:576px) {
+    .carousel .carousel-inner img {
+        width: 100%;
+        height: 200px;
+        object-fit: contain;
+        overflow: hidden;
+    }
+}
+
+
+
+.carousel-inner .active,
+.carousel {
+    background-color: rgb(239, 240, 242);
 }
