--- a/public/css/styl.css
+++ b/public/css/styl.css
@@ -143,6 +143,7 @@ footer .container .row a {
 textarea[type="text"]:focus,
 select[type="text"]:focus,
 input[type="text"]:focus,
+input[type="file"]:focus,
 input[type="email"]:focus,
 input[type="password"]:focus {
     border-color: rgb(143, 188, 143);
