--- a/public/css/styl.css
+++ b/public/css/styl.css
@@ -293,3 +293,14 @@ input[type="password"]:focus {
     left:0;
     border-radius: 20px;
 }
+
+.accordion-button:not(.collapsed) {
+    color: white;
+    background-color: darkseagreen;
+    border-color: darkseagreen;
+}
+
+.accordion-button:focus {
+    box-shadow: none;
+    border-color: rgba(0,0,0,.125);
+}
