--- a/public/css/styl.css
+++ b/public/css/styl.css
@@ -60,35 +60,21 @@ footer .container .row a {
     max-width: 100%;
     width: 480px;
     color: rgb(255, 255, 255);
-    margin-block: 30px 25px;
 }
 
-.card-img-overlay h4 {
-    max-width: 100%;
-    width: 335px;
-    font-size: small;
-    color: rgb(255, 255, 255);
-    opacity: 0.7;
-    margin-block: 30px;
+.card-img-overlay {
+    position: absolute;
+    top: 10%;
+    left: 16px;
 }
 
-.add-offer-button {
-    background-color: darkseagreen;
-    border-radius: 8px;
-    border-style: none;
-    box-sizing: border-box;
-    color: #FFFFFF;
-    display: inline-block;
-    height: 40px;
-    line-height: 20px;
-    margin: 0;
-    outline: none;
-    padding: 10px 16px;
+.image-container {
     position: relative;
-    text-align: center;
-    text-decoration: none;
-    vertical-align: baseline;
-    min-width: 100px;
+}
+
+.homepage-image {
+    width: 100%;
+    height: auto;
 }
 
 .category-image-div {
@@ -102,10 +88,10 @@ footer .container .row a {
 
 .category-image-div img{
     position: absolute;
+    height: auto;
     top: 50%;
     left: 50%;
     width: 80%;
-    height: auto;
     transform: translate(-50%, -50%);
 }
 
