--- a/public/css/styl.css
+++ b/public/css/styl.css
@@ -290,3 +290,7 @@ input[type="password"]:focus {
     box-shadow: none;
     border-color: rgba(0,0,0,.125);
 }
+
+.warning-message {
+    color: darkred;
+}
